--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@hapi/joi": "^15.0.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.2.7"
+    "mongodb": "^3.2.7",
+    "nodemailer": "^6.4.16",
+    "time-stamp": "^2.2.0"
   }
 }
